fixed pictureDetails and navbar

--- a/views/pictureDetails.ejs
+++ b/views/pictureDetails.ejs
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <%- include('./partials/navbar.ejs') %>
     <div class="text-center">
         <div class="text-center">
             <img class="mb-3" src="data:image/png; base64, <%=picture.src%>" style="width:500px">
