--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,6 +22,11 @@
                             <a class="nav-link" href="/logout">Logout</a>
                         </li>
                         <% } %>
+                        <% if (locals.user) { %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/user/profile">Welcome, <%= user.name || user.email %></a>
+                            </li>
+                            <% } %>
             </ul>
         </div>
     </div>
